--- a/css/style.css
+++ b/css/style.css
@@ -541,13 +541,13 @@ p.grand-canyon {
   margin: 50px auto 27px;
 }
 
-.pseudo-header .ordinary-text {
+.search .ordinary-text {
   line-height: 24px;
 }
 
 .interactive {
   text-align: center;
-  margin-top: 47px;
+  margin-top: 45px;
 }
 
 .map {
@@ -563,7 +563,7 @@ p.grand-canyon {
 /*Форма на главной странице*/
 
 .map form {
-  padding: 55px;
+  padding: 54px 55px 55px 55px;
   width: 458px;
   position: absolute;
   z-index: 15;
@@ -601,6 +601,14 @@ p.grand-canyon {
   text-align: center;
   margin: 0px;
   padding: 0px;
+}
+
+.number-left label {
+  margin-right: 37px;
+}
+
+.number-right label {
+  margin-right: 24px;
 }
 
 .filter-range input::-webkit-inner-spin-button,
@@ -661,8 +669,12 @@ p.grand-canyon {
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
-  margin-bottom: 29px;
+  margin-bottom: 30px;
   position: relative;
+}
+
+div .input-cover:nth-child(2){
+  margin-bottom: 31px;
 }
 
 .input-field {
