--- a/css/style.css
+++ b/css/style.css
@@ -1045,9 +1045,14 @@ div.phone {
   background-size: cover;
   background-position: center;
   vertical-align: top;
-  padding: 31px 72px 35px 72px;
+  padding: 25px 75px 35px 72px;
   display: flex;
   flex-wrap: wrap;
+}
+
+.field-group span {
+  margin-right: 9px;
+  margin-top: 1px;
 }
 
 .filter legend {
@@ -1102,7 +1107,7 @@ input[type="checkbox"] {
 }
 
 .filter-range {
-  width: 330px;
+  width: 317px;
   margin-top: 0px;
   margin-left: auto;
   margin-right: 0px;
@@ -1113,7 +1118,7 @@ input[type="checkbox"] {
 }
 
 .filter-range-title {
-  margin-bottom: 13px;
+  margin-bottom: 12px;
   font-weight: 600;
   font-size: 16px;
   line-height: 21px;
@@ -1121,8 +1126,8 @@ input[type="checkbox"] {
 
 .price-controls {
   position: relative;
-  height: 36px;
-  margin-bottom: 20px;
+  height: 32px;
+  margin-bottom: 19px;
   font-size: 0;
   border: 2px solid #ffffff;
   border-radius: 2px;
@@ -1142,20 +1147,24 @@ input[type="checkbox"] {
 .price-controls label {
   display: inline-block;
   font-size: 14px;
-  line-height: 38px;
+  line-height: 27px;
   vertical-align: top;
   cursor: pointer;
 }
 
-.price-controls .min-price,
+.price-controls .min-price {
+  width: 90px;
+  padding-left: 64px;
+}
+
 .price-controls .max-price {
   width: 90px;
-  padding-left: 65px;
+  padding-left: 66px;
 }
 
 .price-controls input {
   width: 50px;
-  margin: 0;
+  margin: 0 0 0 -2px;
   color: inherit;
   font: inherit;
   background: none;
@@ -1228,7 +1237,7 @@ input[type="checkbox"] {
 
 .filter fieldset:nth-child(1) legend,
 .filter fieldset:nth-child(2) legend {
-  margin-bottom: 28px;
+  margin-bottom: 23px;
 }
 
 .filter fieldset:nth-child(1) label:last-child,
@@ -1237,7 +1246,7 @@ input[type="checkbox"] {
 }
 
 .filter fieldset:nth-child(1) {
-  margin-right: 147px;
+  margin-right: 117px;
 }
 
 .edge label {
